Fix horizontal scroll in Safari

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -114,6 +114,7 @@
 .Header-nav {
   flex: 1 0 auto;
   pointer-events: auto;
+  overflow: hidden;
 }
 
 .Header-list {
